added fellowship award

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -54,8 +54,11 @@ Nominated for *Best Paper Award* \hfill 2019
 Technology as an Agent of Change in Teaching in Learning (TACTL) SIG  
 AERA Annual Meeting \hfill Toronto ON
 
-*Council of Graduate Students (COGS) Professional Development Award* - $500 \hfill 2018   
+*Research Practicum/Dissertation Development Fellowship* - $2,000 \hfill 2019  
 Michigan State University, College of Education \hfill East Lansing MI
+
+*Professional Development Award* - $500 \hfill 2018  
+Michigan State University, Council of Graduate Students \hfill East Lansing MI
 
 *Summer Research Renewable Fellowship* - $6,000/year x 2 years \hfill 2018-2019  
 Michigan State University, College of Education \hfill East Lansing MI
