updated with new AECT leadership position

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -178,7 +178,8 @@ Content Analysis for Doctoral Dissertation, Colin Terry, Michigan State Universi
 ## Service to Profession
 
 Association for Educational Communications & Technology (AECT)  
-*Graduate Student Representative*, Research & Theory Division \hfill 2018-2019
+*Secretary*, Research & Theory Division \hfill 2019-2020  
+*Graduate Student Representative*, Research & Theory Division \hfill 2018-2019  
 *Webinar Team Leader*, Graduate Student Association Division \hfill 2018-2019
 
 American Educational Research Association (AERA)  
