--- a/cv.Rmd
+++ b/cv.Rmd
@@ -74,11 +74,11 @@ Bucknell University \hfill Lewisburg PA
 
 Greenhow, C. M., Gleason, B., & **Staudt Willet**, K. B. (in press). Social scholarship revisited: Changing scholarly practices in the age of social media. *British Journal of Educational Technology.*
 
-Greenhalgh, S. P., **Staudt Willet**, K. B., & Koehler, M. J. (in revision). Religious practices in online spaces: Practices, identities, and networks in Twitter #ldsconf.
-
 **Staudt Willet**, K. B. (in revision). Revisiting how and why educators use Twitter: Uses and gratifications in #Edchat.
 
-**Staudt Willet**, K. B., & Carpenter, J. P. (in revision). Teachers on Reddit? Exploring professional learning in four education-related subreddits.
+Greenhalgh, S. P., **Staudt Willet**, K. B., & Koehler, M. J. (under review). Expressions of Mormon identity and approaches to Mormon practice in the #ldsconf Twitter hashtag.
+
+**Staudt Willet**, K. B., & Carpenter, J. P. (under review). Teachers on Reddit? Exploring professional learning in four education-related subreddits.
 
 Greenhalgh, S. P., **Staudt Willet**, K. B., Rosenberg, J. M., & Koehler, M. J. (2018). Tweet, and we shall find: Using digital methods to locate participants in educational hashtags. *TechTrends, 62,* 501-508. doi:10.1007/s11528-018-0313-6
 
@@ -119,6 +119,8 @@ Greenhalgh, S. P., **Staudt Willet**, K. B., & Koehler, M. J. (under review). *T
 **Staudt Willet**, K. B., & Bagdy, L. (under review). *How do you do, fellow kids? "New teachers" in Twitter #ntchat.*
 
 **Staudt Willet**, K. B., & Moudgalya, S. K. (under review). *Community, network, or space: Conceptualizing inspired professional learning in an online discussion forum.*
+
+Greenhow, C. M., **Staudt Willet**, K. B., & Marich, H. (2019, July). Scholarship reconsidered: Examining new scholars’ social media practices. Paper to be presented at the 10th International Conference on Social Media & Society 2019. Toronto, ON, Canada.
 
 **Staudt Willet**, K. B. (2019, April). *Is bigger better? Exploring educators’ uses and gratifications in Twitter #Edchat.* Paper to be presented at the American Educational Research Association (AERA) Annual Meeting 2019. Toronto, ON, Canada. 
 
