--- a/cv.Rmd
+++ b/cv.Rmd
@@ -72,13 +72,15 @@ Bucknell University \hfill Lewisburg PA
 
 ## Peer-Reviewed Journal Articles
 
-Greenhow, C. M., Gleason, B., & **Staudt Willet**, K. B. (in press). Social scholarship revisited: Changing scholarly practices in the age of social media. *British Journal of Educational Technology.*
-
 **Staudt Willet**, K. B. (in revision). Revisiting how and why educators use Twitter: Uses and gratifications in #Edchat.
 
 Greenhalgh, S. P., **Staudt Willet**, K. B., & Koehler, M. J. (under review). Expressions of Mormon identity and approaches to Mormon practice in the #ldsconf Twitter hashtag.
 
+Krutka, D. G., Heath, M. K., & **Staudt Willet**, K. B. (under review). Foregrounding technoethics: A contrarian perspective on the teacher educator technology competencies.
+
 **Staudt Willet**, K. B., & Carpenter, J. P. (under review). Teachers on Reddit? Exploring professional learning in four education-related subreddits.
+
+Greenhow, C. M., Gleason, B., & **Staudt Willet**, K. B. (2019). Social scholarship revisited: Changing scholarly practices in the age of social media. *British Journal of Educational Technology.* doi:10.1111/bjet.12772
 
 Greenhalgh, S. P., **Staudt Willet**, K. B., Rosenberg, J. M., & Koehler, M. J. (2018). Tweet, and we shall find: Using digital methods to locate participants in educational hashtags. *TechTrends, 62,* 501-508. doi:10.1007/s11528-018-0313-6
 
@@ -188,6 +190,7 @@ American Educational Research Association (AERA)
 *Session Presider/Chair*, Annual Meeting (New York NY) \hfill 2018
 
 Society for Information Technology and Teacher Education (SITE)  
+*Co-Chair*, Social Media SIG \hfill 2019-2021  
 *Graduate Student Intern*, Social Media SIG \hfill 2018-2019  
 *Session Presider/Chair*, International Conference (Washington DC) \hfill 2018
 
